Workspace-session/instances.tf
resource "aws_instance" "wsvpc_instance" {
  ami                         = var.ami
  instance_type               = var.instance-type
  subnet_id                   = aws_subnet.wss-pub.id
  associate_public_ip_address = true
  key_name                    = "ohio"

  tags = {
    Name = "${var.vpc-name}-instance"
  }
}
